# rustdesk-codeuchain

./: .gitignore  CODEUCHAIN_CONVERSION.md  CODEUCHAIN_MIGRATION_PLAN.md  Cargo.toml  test_compilation.rs
codeuchain_components/: Cargo.toml  client_chains.rs  client_links.rs  core.rs  core_main_chains.rs  core_main_links.rs  core_main_tests.rs  e2e_integration_tests.rs  e2e_tests.rs  ipc_chains.rs  ipc_facade.rs  ipc_links.rs  message_chains.rs  message_links.rs  migration.rs  mod.rs  performance_tests.rs  server_chains.rs  server_links.rs  system_integration_tests.rs  system_orchestrator.rs  ui_chains.rs  ui_links.rs
codeuchain_components/chains/: mod.rs
codeuchain_components/contexts/: mod.rs
codeuchain_components/examples/: basic_usage.rs  integration_example.rs  simple_demo.rs
codeuchain_components/links/: mod.rs
codeuchain_components/middleware/: mod.rs
codeuchain_components/types/: mod.rs
docs/: CODEUCHAIN_ARCHITECTURE.md
flutter/: pubspec.yaml
flutter/android/: gradle.properties
flutter/android/app/: build.gradle
flutter/lib/: common.dart
flutter/lib/models/: native_model.dart
flutter/local_plugins/flutter_keyboard_visibility-5.3.0/android/: build.gradle
flutter/local_plugins/qr_code_scanner-1.0.1/android/: build.gradle
libs/scrap/: Cargo.toml
libs/scrap/src/android/: ffi.rs
src/: core_main.rs  flutter_ffi.rs  lib.rs  session_wrapper.rs  ui_session_interface.rs
src/hbbs_http/: record_upload.rs  sync.rs
src/server/: display_service.rs
test_package/: Cargo.toml
test_package/src/: main.rs
triplets/: arm64-android.cmake
(+13 files in other folders)
